adjust specification and regenerte code
